...

                    <ProgressBar
                        android:id="@+id/current_weather_card_loading_symbol"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
...

                    <ImageView
                        android:id="@+id/current_weather_reload_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:minHeight="40dp"
                        android:minWidth="40dp"
                        app:layout_constraintBottom_toBottomOf="@id/current_weather_reload_text"
                        app:layout_constraintEnd_toStartOf="@id/current_weather_reload_text"
                        app:layout_constraintHorizontal_bias="0.5"
...

                    <TextView
                        android:id="@+id/temperature_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <ProgressBar
                        android:id="@+id/wind_card_loading_symbol"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
...

                    <ImageView
                        android:id="@+id/wind_card_reload_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_marginStart="8dp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@id/wind_speed_amount"
                        app:layout_constraintEnd_toStartOf="@id/wind_speed_amount"
                        app:layout_constraintHorizontal_bias="0.5"
...

                    <ProgressBar
                        android:id="@+id/precipitation_card_loading_symbol"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
...

                    <ImageView
                        android:id="@+id/precipitation_card_reload_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_marginStart="8dp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@id/precipitation_amount"
                        app:layout_constraintEnd_toStartOf="@id/precipitation_amount"
                        app:layout_constraintHorizontal_bias="0.5"
...

            <ProgressBar
                android:id="@+id/forecast_loading_symbol"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
...

            <ImageView
                android:id="@+id/forecast_reload_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:src="@android:drawable/stat_notify_sync"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/forecast_reload_text"
                app:layout_constraintEnd_toStartOf="@id/forecast_reload_text"
                app:layout_constraintHorizontal_bias="0.5"
...

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/forecast_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
