...

                <ImageView
                    android:id="@+id/close_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                    <ProgressBar
                        android:id="@+id/hourly_forecast_loading_symbol"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
...

                    <ImageView
                        android:id="@+id/hourly_forecast_reload_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/stat_notify_sync"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@id/hourly_forecast_reload_text"
                        app:layout_constraintEnd_toStartOf="@id/hourly_forecast_reload_text"
                        app:layout_constraintHorizontal_bias="0.5"
...

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/hourly_forecast_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                    <ProgressBar
                        android:id="@+id/daily_forecast_loading_symbol"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
...

                    <ImageView
                        android:id="@+id/daily_forecast_reload_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/stat_notify_sync"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@id/daily_forecast_reload_text"
                        app:layout_constraintEnd_toStartOf="@id/daily_forecast_reload_text"
                        app:layout_constraintHorizontal_bias="0.5"
...

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/daily_forecast_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...

                    <ProgressBar
                        android:id="@+id/uvi_forecast_loading_symbol"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
...

                    <ImageView
                        android:id="@+id/uvi_forecast_reload_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/stat_notify_sync"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@id/uvi_forecast_reload_text"
                        app:layout_constraintEnd_toStartOf="@id/uvi_forecast_reload_text"
                        app:layout_constraintHorizontal_bias="0.5"
...

                    <br.com.marcottc.weatherpeek.view.custom.UviMeter
                        android:id="@+id/uvi_meter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
